# ChangeLog for net-dialup/lrzsz
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/lrzsz/ChangeLog,v 1.11 2009/01/26 03:50:56 vapier Exp $

  26 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  files/lrzsz-implicit-decl.patch:
  Tweak decl patch so it fully works.

*lrzsz-0.12.20-r2 (11 Jan 2009)

  11 Jan 2009; Alin Năstac <mrness@gentoo.org> +lrzsz-0.12.20-r2.ebuild:
  Install manpage symlinks for all available commands (#251630).

  25 May 2008; <solar@gentoo.org> lrzsz-0.12.20-r1.ebuild:
  - cross compile fix. inherit toolchain-funcs ; tc-export CC

  29 Dec 2007; <welp@gentoo.org> lrzsz-0.12.20-r1.ebuild:
  Keyworded ~x86-fbsd; bug 202740

  14 Apr 2007; Alin Năstac <mrness@gentoo.org>
  +files/lrzsz-implicit-decl.patch, lrzsz-0.12.20-r1.ebuild:
  Fix implicit declaration warnings.

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> lrzsz-0.12.20-r1.ebuild:
  Marked stable on mips.

  12 Mar 2006; Alin Nastac <mrness@gentoo.org> lrzsz-0.12.20-r1.ebuild:
  Quote $FILESDIR and add die messages.

  05 Feb 2006; Alin Nastac <mrness@gentoo.org> lrzsz-0.12.20-r1.ebuild:
  Use make vcheck for testing the package (#120748).

  27 Jun 2005; Markus Rothe <corsair@gentoo.org> lrzsz-0.12.20-r1.ebuild:
  Stable on ppc64

  21 May 2005; Markus Rothe <corsair@gentoo.org> lrzsz-0.12.20-r1.ebuild:
  Added ~ppc64 to KEYWORDS

  20 Apr 2005; Alin Nastac <mrness@gentoo.org> :
  Moved from net-misc/lrzsz to net-dialup/lrzsz

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  20 Nov 2004; Daniel Black <dragonheart@gentoo.org> lrzsz-0.12.20-r1.ebuild:
  ppc stable as per bug #71817

  19 Nov 2004; Alin Nastac <mrness@gentoo.org> +metadata.xml,
  +files/lrzsz-makefile-smp.patch, lrzsz-0.12.20-r1.ebuild:
  Solve install failure on SMP machines (see #70931). Add metadata.xml.

  14 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org>
  lrzsz-0.12.20-r1.ebuild: