@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/lrzsz
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/lrzsz/ChangeLog,v 1.11 2009/01/26 03:50:56 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/lrzsz/ChangeLog,v 1.12 2009/04/10 23:02:09 mrness Exp $
+
+  10 Apr 2009; Alin Năstac <mrness@gentoo.org> lrzsz-0.12.20-r2.ebuild:
+  Migrate to EAPI 2. Add libintl dependency atom (#263946).
 
   26 Jan 2009; Mike Frysinger <vapier@gentoo.org>
   files/lrzsz-implicit-decl.patch:
